
SUBDIRS = Data06 Data07 Data08 Data09 Data10 Data11 Data12 Data16 Data17 \
          Data18 Data19 Data20 Data21 Data22 Data23 Data24 Data25 Data26 \
          Data27 Data28 Data29 Data30

EXTRA_DIST = autogen.sh VisualC.zip Glext.h

noinst_PROGRAMS = lesson02 lesson03 lesson04 lesson05 lesson06 lesson07 \
                  lesson08 lesson09 lesson10 lesson11 lesson12 lesson16 \
                  lesson17 lesson18 lesson19 lesson20 lesson21 lesson22 \
                  lesson23 lesson24 lesson25 lesson26 lesson27 lesson28 \
                  lesson29 lesson30

lesson02_LDADD = @GL_LIBS@
lesson03_LDADD = @GL_LIBS@
lesson04_LDADD = @GL_LIBS@
lesson05_LDADD = @GL_LIBS@
lesson06_LDADD = @GL_LIBS@
lesson07_LDADD = @GL_LIBS@
lesson08_LDADD = @GL_LIBS@
lesson09_LDADD = @GL_LIBS@
lesson10_LDADD = @GL_LIBS@
lesson11_LDADD = @GL_LIBS@
lesson12_LDADD = @GL_LIBS@
lesson16_LDADD = @GL_LIBS@
lesson17_LDADD = @GL_LIBS@
lesson18_LDADD = @GL_LIBS@
lesson19_LDADD = @GL_LIBS@
lesson20_LDADD = @GL_LIBS@
lesson21_LDADD = @GL_LIBS@ @SOUND_LIBS@
lesson22_LDADD = @GL_LIBS@
lesson23_LDADD = @GL_LIBS@
lesson24_LDADD = @GL_LIBS@
lesson25_LDADD = @GL_LIBS@
lesson26_LDADD = @GL_LIBS@
lesson27_LDADD = @GL_LIBS@
lesson28_LDADD = @GL_LIBS@
lesson29_LDADD = @GL_LIBS@
lesson30_LDADD = @GL_LIBS@
